[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "VerySeriousButton-vsbutil"
description = "CLI utility and Python driver for configuring Very Serious Buttons"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  {name = "GC", email = "gc@grenlabs.com"},
  ]
maintainers = [
  {name = "GC", email = "gc@grenlabs.com"},
  ]
dependencies = [
  "hidapi>=0.14",
  ]
dynamic = ["version"]

[project.scripts]
vsbutil = "vsbutil.cli:run"

[tool.setuptools]
packages = [
  "vsbutil",
  ]

[tool.setuptools_scm]
root = "."
write_to = "vsbutil/_version.py"
